Randoms and dynatext in titles, connect, disconnect and reconnect messages, 
prompts and aliases.

^WDon't forget the talker meet! 8th May 2010 in Coventry. For more
^Winformation speak to SockEyE or Ace.