@@ -38,12 +38,11 @@ class Items < Array
     'vodka'   => Item.new("Vodka", "Dragon brand 70cl (10 servings)", 10, 1500),
     'chopper' => Item.new("Chopper", "Raleigh Bicycle. Speed 1, Traction 2", 1, 1000),
     'minibus' => Item.new("Minibus", "Salvation Army Minibus. Speed 2, Traction 1", 1, 5000),
-    'lada'    => Item.new("Lada", "Lada VTFS Rally car. Speed 2, Traction 3", 1, 20000),
-    'subaru'  => Item.new("Subaru", "Subaru Impreza Rally car. Speed 4, Traction 4", 1, 50000),
-    'skoda'   => Item.new("Skoda", "Skoda Fabia Rally car. Speed 5, Traction 3", 1, 125000),
-    'ford'    => Item.new("Ford", "Ford Focus RS Rally car. Speed 5, Traction 5", 1, 225000),
-    'citroen' => Item.new("Citroen", "Citroen C4 Rally car. Speed 6, Traction 4", 1, 350000),
-    'ferrari' => Item.new("Ferrari", "Ferrari F10 Formula 1 Car. Speed 7, Traction -20", 1, 1000000)
+    'lada'    => Item.new("Lada", "Lada VTFS Rally car. Speed 3, Traction 3", 1, 20000),
+    'subaru'  => Item.new("Subaru", "Subaru Impreza Rally car. Speed 3, Traction 4", 1, 50000),
+    'skoda'   => Item.new("Skoda", "Skoda Fabia Rally car. Speed 4, Traction 3", 1, 125000),
+    'ford'    => Item.new("Ford", "Ford Focus RS Rally car. Speed 4, Traction 5", 1, 225000),
+    'citroen' => Item.new("Citroen", "Citroen C4 Rally car. Speed 5, Traction 4", 1, 350000)
   }
 
   def add(item)
