@@ -1,5 +1,7 @@
-Randoms and dynatext in titles, connect, disconnect and reconnect messages, 
-prompts and aliases.
+Pike numbers have risen to an unacceptable level. Dragon World fisheries 
+are offering 10 times more than normal for their capture.
+
+Rally rewards have been lowered
 
 ^WDon't forget the talker meet! 8th May 2010 in Coventry. For more
 ^Winformation speak to SockEyE or Ace.
